# test-qt-app

./: main.cpp  meson.build
resources/: resources.qrc
